@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.037.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.008.
 use strict;
 use warnings;
 
@@ -13,7 +13,6 @@ my %WriteMakefileArgs = (
     "ExtUtils::MakeMaker" => 0
   },
   "DISTNAME" => "CPAN-Meta-Prereqs-Diff",
-  "EXE_FILES" => [],
   "LICENSE" => "perl",
   "MIN_PERL_VERSION" => "5.006",
   "NAME" => "CPAN::Meta::Prereqs::Diff",
@@ -32,7 +31,7 @@ my %WriteMakefileArgs = (
     "CPAN::Meta" => 0,
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
-    "Test::More" => "0.89"
+    "Test::More" => 0
   },
   "VERSION" => "0.001004",
   "test" => {
@@ -51,7 +50,7 @@ my %FallbackPrereqs = (
   "Moo" => "1.000008",
   "Moo::Role" => 0,
   "Scalar::Util" => 0,
-  "Test::More" => "0.89",
+  "Test::More" => 0,
   "strict" => 0,
   "version" => 0,
   "warnings" => 0
