@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.001004
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 0.001003 2015-07-16T20:41:42Z
  [Added / configure requires]
