@@ -1,6 +1,14 @@
 Release history for CPAN-Meta-Prereqs-Diff
 
 {{$NEXT}}
+ [Bugfix]
+ - Avoid test failures on 5.26 w/ -Ddefault_inc_excludes_dot
+ - Closes https://github.com/kentnl/CPAN-Meta-Prereqs-Diff/issues/1
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.001003, see misc/*.deps* for details
+ - develop: +3 ↑2 (suggests: ↑2)
+ - test: ↓1
 
 0.001003 2015-07-16T20:41:42Z 22579fa
  [Dependencies::Stats]
